feat: esercizio completato

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,3 +2,4 @@
 @use '../scss/partials/mediaqueries' as *;
 @use '../scss/partials/typography' as *;
 @use '../scss/partials/utilities' as *;
+@use '../scss/partials/reset' as *;
